; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/kbdmux/extr_kbdmux.c_kbdmux_clear_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/kbdmux/extr_kbdmux.c_kbdmux_clear_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @kbdmux_clear_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kbdmux_clear_state(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to i32*
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @KBDMUX_LOCK(i32* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @kbdmux_clear_state_locked(i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @KBDMUX_UNLOCK(i32* %12)
  ret void
}

declare dso_local i32 @KBDMUX_LOCK(i32*) #1

declare dso_local i32 @kbdmux_clear_state_locked(i32*) #1

declare dso_local i32 @KBDMUX_UNLOCK(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
